# kafka-tui

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: test_kafka.rs
src/: error.rs  lib.rs  main.rs
src/app/: actions.rs  mod.rs  runner.rs  state.rs  update.rs  validation.rs
src/app/handlers/: brokers.rs  connection.rs  consumer_groups.rs  logs.rs  messages.rs  mod.rs  navigation.rs  system.rs  topics.rs  ui.rs
src/config/: app_config.rs  connection_config.rs  mod.rs
src/events/: handler.rs  key_bindings.rs  mod.rs
src/kafka/: admin.rs  admin_ffi.rs  client.rs  config.rs  consumer.rs  mod.rs  producer.rs
src/storage/: bookmarks.rs  connections.rs  db.rs  history.rs  mod.rs  models.rs
src/ui/: layout.rs  mod.rs  render.rs  theme.rs  widgets.rs
src/ui/components/: add_partitions_form_modal.rs  alter_config_form_modal.rs  confirm_modal.rs  connection_form_modal.rs  header.rs  help_modal.rs  input_modal.rs  mod.rs  produce_form_modal.rs  purge_topic_form_modal.rs  sidebar.rs  status_bar.rs  toast.rs  topic_create_form_modal.rs
src/ui/screens/: brokers.rs  logs.rs  mod.rs  welcome.rs
src/ui/screens/consumer_groups/: details.rs  list.rs  mod.rs
src/ui/screens/messages/: browser.rs  mod.rs  producer.rs
src/ui/screens/topics/: create.rs  details.rs  list.rs  mod.rs
