[package]
name = "kafka-tui"
version = "0.1.0"
edition = "2024"
authors = ["kafka-tui contributors"]
description = "A Terminal User Interface for Apache Kafka"
license = "MIT"
readme = "README.md"

[dependencies]
# TUI Framework
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }

# Async Runtime
tokio = { version = "1.42", features = ["full", "sync", "macros", "rt-multi-thread"] }
futures = "0.3"

# Kafka Client
rdkafka = { version = "0.38", features = ["cmake-build", "ssl", "sasl", "tokio"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Configuration & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# CLI Arguments
clap = { version = "4.5", features = ["derive"] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
dirs = "6.0"
strum = { version = "0.27", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
